<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#080909"
    tools:context=".MainActivity">

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:background="#00FFFFFF"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button11"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:background="#00FFFFFF"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button10"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        android:background="#00FFFFFF"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button9"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="130dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/_9"
        android:textSize="45sp"
        android:typeface="normal"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/_6"
        android:textSize="45sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/buttonMultiplication"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/multiplication"
        android:textSize="45sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonDivision"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivision" />

    <Button
        android:id="@+id/buttonDivision"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/division"
        android:textSize="45sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonSubtract"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubtract" />

    <Button
        android:id="@+id/buttonSubtract"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/subtract"
        android:textSize="45sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@+id/buttonCancel" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        android:background="#00FFFFFF"
        android:fontFamily="casual"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="normal"
        app:icon="@android:drawable/ic_input_delete"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/_3"
        android:textSize="45sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/buttonAddition"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="73dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/addition"
        android:textSize="45sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonMultiplication"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiplication" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="73dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/equals"
        android:textSize="45sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button8"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="130dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/_8"
        android:textSize="45sp"
        android:typeface="normal"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/_5"
        android:textSize="45sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button2"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/_2"
        android:textSize="45sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button0"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="73dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/_0"
        android:textSize="45sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <EditText
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="viewEnd"
        android:textColor="#FBF9F9"
        android:textSize="48sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor">

    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:textAlignment="viewEnd"
        android:textColor="#FBF9F9"
        android:textSize="48sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="130dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/_7"
        android:textSize="45sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/_4"
        android:textSize="45sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button1"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/_1"
        android:textSize="45sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/buttonDecimal"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="73dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/decimal"
        android:textSize="45sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

</androidx.constraintlayout.widget.ConstraintLayout>